--- a/index.html
+++ b/index.html
@@ -8,6 +8,70 @@
     <title>Frontend Mentor Four Card Feature Section</title>
   </head>
   <body>
+    <section class="features-container">
+      <div class="features">
+        <!-- title -->
+        <div class="features-title">
+          <h1>
+            Reliable, efficient delivery
+            <span>Powered by Technology</span>
+          </h1>
+          <p>
+            Our Artificial Intelligence powered tools use millions of project
+            data points to ensure that your project is successful
+          </p>
+        </div>
+        <!-- cards -->
+        <div class="features-cards">
+          <!-- column -->
+          <div class="col">
+            <article class="features-card">
+              <h2>Supervisor</h2>
+              <p>Monitors activity to identify project roadblocks</p>
+              <div class="features-card-img">
+                <img src="./images/icon-supervisor.svg" alt="supervisor icon" />
+              </div>
+            </article>
+          </div>
+          <!-- column -->
+          <div class="col">
+            <article class="features-card">
+              <h2>Team Builder</h2>
+              <p>
+                Scans our talent network to create the optimal team for your
+                project
+              </p>
+              <div class="features-card-img">
+                <img
+                  src="./images/icon-team-builder.svg"
+                  alt="team builder icon"
+                />
+              </div>
+            </article>
+            <article class="features-card">
+              <h2>Karma</h2>
+              <p>Regularly evaluates our talent to ensure quality</p>
+              <div class="features-card-img">
+                <img src="./images/icon-supervisor.svg" alt="supervisor icon" />
+              </div>
+            </article>
+          </div>
+          <!-- column -->
+          <div class="col">
+            <article class="features-card">
+              <h2>Calculator</h2>
+              <p>
+                Uses data from past projects to provide better delivery
+                estimates
+              </p>
+              <div class="features-card-img">
+                <img src="./images/icon-calculator.svg" alt="calculator icon" />
+              </div>
+            </article>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
