--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <section class="features-container">
       <div class="features">
         <!-- title -->
-        <div class="features-title">
-          <h1>
+        <div class="features-title pb-5">
+          <h1 class="pb-1">
             Reliable, efficient delivery
             <span>Powered by Technology</span>
           </h1>
@@ -25,7 +25,7 @@
         <div class="features-cards">
           <!-- column -->
           <div class="col">
-            <article class="features-card">
+            <article class="features-card supervisor">
               <h2>Supervisor</h2>
               <p>Monitors activity to identify project roadblocks</p>
               <div class="features-card-img">
@@ -35,7 +35,7 @@
           </div>
           <!-- column -->
           <div class="col">
-            <article class="features-card">
+            <article class="features-card team-builder mb-2">
               <h2>Team Builder</h2>
               <p>
                 Scans our talent network to create the optimal team for your
@@ -48,17 +48,17 @@
                 />
               </div>
             </article>
-            <article class="features-card">
+            <article class="features-card karma">
               <h2>Karma</h2>
               <p>Regularly evaluates our talent to ensure quality</p>
               <div class="features-card-img">
-                <img src="./images/icon-supervisor.svg" alt="supervisor icon" />
+                <img src="./images/icon-karma.svg" alt="karma icon" />
               </div>
             </article>
           </div>
           <!-- column -->
           <div class="col">
-            <article class="features-card">
+            <article class="features-card calculator">
               <h2>Calculator</h2>
               <p>
                 Uses data from past projects to provide better delivery
