created hover & focus effect on cards

--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
         <div class="features-cards">
           <!-- column -->
           <div class="col">
-            <article class="features-card supervisor" data-aos="fade-right">
-              <h2>Supervisor</h2>
+            <article
+              class="features-card supervisor"
+              data-aos="fade-right"
+              tabindex="0"
+            >
+              <div class="features-card-title-container">
+                <h2 class="features-card-title">Supervisor</h2>
+              </div>
               <p>Monitors activity to identify project roadblocks</p>
               <div class="features-card-img">
                 <img src="./images/icon-supervisor.svg" alt="supervisor icon" />
@@ -39,8 +45,11 @@
             <article
               class="features-card team-builder mb-2"
               data-aos="fade-down"
+              tabindex="0"
             >
-              <h2>Team Builder</h2>
+              <div class="features-card-title-container">
+                <h2 class="features-card-title">Team Builder</h2>
+              </div>
               <p>
                 Scans our talent network to create the optimal team for your
                 project
@@ -52,8 +61,14 @@
                 />
               </div>
             </article>
-            <article class="features-card karma" data-aos="fade-up">
-              <h2>Karma</h2>
+            <article
+              class="features-card karma"
+              data-aos="fade-up"
+              tabindex="0"
+            >
+              <div class="features-card-title-container">
+                <h2 class="features-card-title">Karma</h2>
+              </div>
               <p>Regularly evaluates our talent to ensure quality</p>
               <div class="features-card-img">
                 <img src="./images/icon-karma.svg" alt="karma icon" />
@@ -62,8 +77,14 @@
           </div>
           <!-- column -->
           <div class="col">
-            <article class="features-card calculator" data-aos="fade-left">
-              <h2>Calculator</h2>
+            <article
+              class="features-card calculator"
+              data-aos="fade-left"
+              tabindex="0"
+            >
+              <div class="features-card-title-container">
+                <h2 class="features-card-title">Calculator</h2>
+              </div>
               <p>
                 Uses data from past projects to provide better delivery
                 estimates
