added hover effect on footer links

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           href="https://www.frontendmentor.io/challenges/four-card-feature-section-weK1eFYK"
           target="_blank"
         >
-          frontend mentor.
+          frontend mentor
         </a>
         coded by
         <a href="https://github.com/habibdev96" target="_blank">habibdev</a>
