--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
           href="https://www.frontendmentor.io/challenges/four-card-feature-section-weK1eFYK"
           target="_blank"
         >
-          frontend mentor
-        </a>
+          frontend mentor</a
+        >
         coded by
         <a href="https://github.com/habibdev96" target="_blank">habibdev</a>
         */
